Working on API doc demo

--- a/sandbox/apiCatgories/configuration.html
+++ b/sandbox/apiCatgories/configuration.html
@@ -1,26 +1,30 @@
 <h3>Configuration</h3>
-			<code>pbjs.setConfig(options)</code><br /><br />
-			<code>setConfig</code> supports a number of advanced configuration options:
+			
+<code>pbjs.setConfig(options)</code><br /><br />
+<code>setConfig</code> supports a number of advanced configuration options:
+
+<div class="api-list">
+	<ul>
+		<li>.setConfig(options)
 			<ul>
-				<li>.setConfig(options)
-					<ul>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=debugging">debugging</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=bidderTimeout">bidderTimeout</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=maxRequestsPerOrigin">maxRequestsPerOrigin</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=disableAjaxTimeout">disableAjaxTimeout</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=timeoutBuffer">timeoutBuffer</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=enableSendAllBids">enableSendAllBids</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=useBidCache">useBidCache</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=bidderOrder">bidderOrder</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=publisherDomain">publisherDomain</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=priceGranularity">priceGranularity</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=mediaTypePriceGranularity">mediaTypePriceGranularity</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=s2sConfig">s2sConfig (server-to-server config)</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=userSync">userSync</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=sizeConfigAndLabels">sizeConfig and labels (responsive ads)</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=genericConfig">Generic Configuration</a></li>
-						<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=troubleshootingConfig">Troubleshooting your config</a></li>
-					</ul>
-				</li>
-				<li>.getConfig([string])</li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=bidderOrder">bidderOrder</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=bidderTimeout">bidderTimeout</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=debugging">debugging</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=disableAjaxTimeout">disableAjaxTimeout</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=enableSendAllBids">enableSendAllBids</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=genericConfig">Generic Configuration</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=maxRequestsPerOrigin">maxRequestsPerOrigin</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=mediaTypePriceGranularity">mediaTypePriceGranularity</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=priceGranularity">priceGranularity</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=publisherDomain">publisherDomain</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=s2sConfig">s2sConfig (server-to-server config)</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=sizeConfigAndLabels">sizeConfig and labels (responsive ads)</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=timeoutBuffer">timeoutBuffer</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=useBidCache">useBidCache</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=userSync">userSync</a></li>
+				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=troubleshootingConfig">Troubleshooting your config</a></li>
 			</ul>
+		</li>
+		<li>.getConfig([string])</li>
+	</ul>
+</div>
