Working on API format

--- a/sandbox/apiCatgories/configuration.html
+++ b/sandbox/apiCatgories/configuration.html
@@ -25,6 +25,6 @@
 				<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=troubleshootingConfig">Troubleshooting your config</a></li>
 			</ul>
 		</li>
-		<li>.getConfig([string])</li>
+		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=getConfig">.getConfig([string])</a></li>
 	</ul>
 </div>
