--- a/sandbox/apiCatgories/bids.html
+++ b/sandbox/apiCatgories/bids.html
@@ -3,15 +3,15 @@
 
 <div class="api-list">
 	<ul>
-		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=aliasBidder()">.aliasBidder(adapterName, aliasedName)</a></li>
-		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=bidderSettings()">.bidderSettings</a></li>
-		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getAllWinningBids()">.getAllWinningBids()</a></li>
-		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getAllPrebidWinningBids()">.getAllPrebidWinningBids()</a></li>
+		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=aliasBidder">.aliasBidder(adapterName, aliasedName)</a></li>
+		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=bidderSettings">.bidderSettings</a></li>
+		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getAllWinningBids">.getAllWinningBids()</a></li>
+		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getAllPrebidWinningBids">.getAllPrebidWinningBids()</a></li>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getBidResponses">.getBidResponses()</a></li>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getHighestCpmBids">.getHighestCpmBids([adUnitCode])</a></li>
-		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getNoBids()">.getNoBids()</a></li>
+		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getNoBids">.getNoBids()</a></li>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=getBidResponsesForAdUnitCode">.getBidResponsesForAdUnitCode(adUnitCode)</a></li>
-		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=markWinningBidAsUsed()">.markWinningBidAsUsed(markBidRequest)</a></li>
-		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=requestBids()">.requestBids(requestObj)</a></li>	
+		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=markWinningBidAsUsed">.markWinningBidAsUsed(markBidRequest)</a></li>
+		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=requestBids">.requestBids(requestObj)</a></li>	
 	</ul>
 </div>
