--- a/sandbox/apiCatgories/bids.html
+++ b/sandbox/apiCatgories/bids.html
@@ -1,7 +1,6 @@
-<h3>Bids</h3>
+<div class="pb-api-title">Bids</div>
 			
-
-<div class="api-list">
+<div class="pb-api-list pb-api-block">
 	<ul>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=aliasBidder">.aliasBidder(adapterName, aliasedName)</a></li>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=bids&amp;apiDefinition=bidderSettings">.bidderSettings</a></li>
