--- a/sandbox/apiCatgories/server.html
+++ b/sandbox/apiCatgories/server.html
@@ -1,7 +1,6 @@
-<h3>Server</h3>
+<div class="pb-api-title">Server</div>
 			
-
-<div class="api-list">
+<div class="pb-api-list pb-api-block">
 	<ul>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=server&amp;apiDefinition=adSeerversDFPBuildVideoUrl">.adServers.dfp.buildVideoUrl(options)</a></li>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=server&amp;apiDefinition=adSeerversFreewheelGetTargeting">.adServers.freewheel.getTargeting(options)</a></li>
