--- a/sandbox/apiCatgories/targeting.html
+++ b/sandbox/apiCatgories/targeting.html
@@ -1,7 +1,6 @@
-<h3>Targeting</h3>
+<div class="pb-api-title">Targeting</div>
 			
-
-<div class="api-list">
+<div class="pb-api-list pb-api-block">
 	<ul>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=targeting&amp;apiDefinition=getAdserverTargeting">.getAdserverTargeting()</a></li>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=targeting&amp;apiDefinition=setTargetingForGPTAsync">.setTargetingForGPTAsync([codeArr])</a></li>
