--- a/sandbox/apiCatgories/adunit.html
+++ b/sandbox/apiCatgories/adunit.html
@@ -1,7 +1,6 @@
-<h3>Ad Unit</h3>
+<div class="pb-api-title">Ad Unit</div>
 			
-
-<div class="api-list">
+<div class="pb-api-list pb-api-block">
 	<ul>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=adunit&amp;apiDefinition=addAdUnits">.addAdUnits(Array|Object)</a></li>
 		<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=adunit&amp;apiDefinition=getAdserverTargetingForAdUnitCode">.getAdserverTargetingForAdUnitCode([adUnitCode])</a></li>
