--- a/sandbox/apiCatgories/configuration.html
+++ b/sandbox/apiCatgories/configuration.html
@@ -9,6 +9,7 @@
 		<li>.setConfig(options)
 			<div class="pb-api-list pb-api-block">
 				<ul>
+					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=app">app (mobile app post-bid)</a></li>
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=bidderOrder">bidderOrder</a></li>
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=bidderTimeout">bidderTimeout</a></li>
 					<li><a href="/sandbox/prebid-api-guide.html?apiDocTarget=configuration&amp;apiDefinition=debugging">debugging</a></li>
