Added a return to API from search results

--- a/sandbox/apiCatgories/about.html
+++ b/sandbox/apiCatgories/about.html
@@ -4,7 +4,7 @@
 	
 	<div class="pb-api-doc-description">Prebid API is a RESTful API that primarily utilizes the HTTP method GET to retrieve resources. The resources are returned as JSON-encoded responses. The API also enables users to create a custom configuration of Prebid.js to provide more specificity in bid requests and enable debugging and troubleshooting.</div>
 	<div class="pb-api-doc-sub-title">Prebid API format</div>
-	<div class="pb-api-doc-description">The API format provides a brief description of each method, followed by a code example. If the method requires arguments or returns a response there will be a listing, explanation and example of each. For example:</div>
+	<div class="pb-api-doc-description">The API format provides a brief description of each method, followed by a code example. If the method requires arguments or returns a response there will be a listing of parameters and possibly a code example. For example:</div>
 	<hr>
 	
 	<div class="pb-api-doc-title">Bidder Order</div>
