updating nav font

--- a/examples/video/instream/brid/pb-ve-brid.html
+++ b/examples/video/instream/brid/pb-ve-brid.html
@@ -159,15 +159,15 @@
 					<h4>Prebid Video Examples
 					<p class="pb-video-list-title">Instream</p>
 					<ul class="pb-video-list" style="list-style-type:none">
-						<li><a href="/examples/video/instream/brid/pb-ve-brid.html">Brid</a></li>
-						<li><a href="/examples/video/instream/brightcove/pb-ve-brightcove.html">Brightcove</a></li>	
-						<li><a href="/examples/video/instream/flowplayer/pb-ve-flowplayer.html">Flowplayer</a></li>
-						<li><a href="/examples/video/instream/jwplayer/pb-ve-jwplayer-platform.html">JW Player (Platform)</a></li>
-						<li><a href="/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html">JW Player (Self Hosted)</a></li>
-						<li><a href="/examples/video/instream/jwplayer/pb-ve-jwplayer-playlist.html">JW Player (Playlist)</a></li>
-						<li><a href="/examples/video/instream/kaltura/pb-ve-kaltura.html">Kaltura</a></li>
-						<li><a href="/examples/video/instream/ooyala/pb-ve-ooyala.html">Ooyala</a></li>
-						<li><a href="/examples/video/instream/videojs/pb-ve-videojs.html">VideoJS</a></li> 
+						<li><a href="/examples/video/instream/brid/pb-ve-brid.html" class="pb-video-link">Brid</a></li>
+						<li><a href="/examples/video/instream/brightcove/pb-ve-brightcove.html" class="pb-video-link">Brightcove</a></li>	
+						<li><a href="/examples/video/instream/flowplayer/pb-ve-flowplayer.html" class="pb-video-link">Flowplayer</a></li>
+						<li><a href="/examples/video/instream/jwplayer/pb-ve-jwplayer-platform.html" class="pb-video-link">JW Player (Platform)</a></li>
+						<li><a href="/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html" class="pb-video-link">JW Player (Self Hosted)</a></li>
+						<li><a href="/examples/video/instream/jwplayer/pb-ve-jwplayer-playlist.html" class="pb-video-link">JW Player (Playlist)</a></li>
+						<li><a href="/examples/video/instream/kaltura/pb-ve-kaltura.html" class="pb-video-link">Kaltura</a></li>
+						<li><a href="/examples/video/instream/ooyala/pb-ve-ooyala.html" class="pb-video-link">Ooyala</a></li>
+						<li><a href="/examples/video/instream/videojs/pb-ve-videojs.html" class="pb-video-link">VideoJS</a></li> 
 					</ul>
 					<hr>
 					<p>Outstream</p>
