Fixed left nav font weight

--- a/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
+++ b/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
@@ -124,7 +124,7 @@
 			
 				<!--left nav-->
 				<div class="col-sm-2 sidebar-expanded d-none d-md-block sidebar" id="sidebar">
-					<h4>Prebid Video Examples
+					<h4>Prebid Video Examples</h4>
 					<p class="pb-video-list-title">Instream</p>
 					<ul class="pb-video-list" style="list-style-type:none">
 						<li><a href="/examples/video/instream/brid/pb-ve-brid.html">Brid</a></li>
