updated link to root

--- a/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
+++ b/examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
@@ -25,13 +25,13 @@
 		<!--<link href="http://www.prebid.org/assets/css/bootstrap.min.css" rel="stylesheet">-->
 		<!-- Latest compiled and minified Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link href="http://www.prebid.org/assets/css/docs.min.css" rel="stylesheet">
-		<link href="http://www.prebid.org/assets/css/style.css" rel="stylesheet">
+		<link href="/assets/css/docs.min.css" rel="stylesheet">
+		<link href="/assets/css/style.css" rel="stylesheet">
 		
 		
 		<!-- Favicons -->
-		<link href="http://www.prebid.org/assets/images/favicon.png" rel="icon">
-		<link href="http://www.prebid.org/assets/images/apple-touch-icon.png" rel="apple-touch-icon">
+		<link href="/assets/images/favicon.png" rel="icon">
+		<link href="/assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 		
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -41,14 +41,14 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 	
 
-		<script src="http://www.prebid.org/assets/js/prism.js"></script>
-		<script src="http://www.prebid.org/assets/js/jquery.min.js"></script>
-		<script src="http://www.prebid.org/assets/js/bootstrap.js"></script>
-		<script src="http://www.prebid.org/assets/js/bootbox.min.js"></script>
-		<script src="http://www.prebid.org/assets/js/docs.min.js"></script>
-		<script src="http://www.prebid.org/assets/js/easing.min.js"></script>
-		<script src="http://www.prebid.org/assets/js/main.js"></script>
-		<script type="text/javascript" src="http://www.prebid.org/assets/js/pbjs_home.js"></script>
+		<script src="/assets/js/prism.js"></script>
+		<script src="/assets/js/jquery.min.js"></script>
+		<script src="/assets/js/bootstrap.js"></script>
+		<script src="/assets/js/bootbox.min.js"></script>
+		<script src="/assets/js/docs.min.js"></script>
+		<script src="/assets/js/easing.min.js"></script>
+		<script src="/assets/js/main.js"></script>
+		<script type="text/javascript" src="/assets/js/pbjs_home.js"></script>
 		
 		<!--Prebid.js and video player code-->
 		<script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
