fixing brid placementid

--- a/examples/video/instream/brid/pb-ve-brid.html
+++ b/examples/video/instream/brid/pb-ve-brid.html
@@ -42,14 +42,14 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 	
 
-		<script src="http://www.prebid.org/assets/js/prism.js"></script>
-		<script src="http://www.prebid.org/assets/js/jquery.min.js"></script>
-		<script src="http://www.prebid.org/assets/js/bootstrap.js"></script>
-		<script src="http://www.prebid.org/assets/js/bootbox.min.js"></script>
-		<script src="http://www.prebid.org/assets/js/docs.min.js"></script>
-		<script src="http://www.prebid.org/assets/js/easing.min.js"></script>
-		<script src="http://www.prebid.org/assets/js/main.js"></script>
-		<script type="text/javascript" src="http://www.prebid.org/assets/js/pbjs_home.js"></script>
+		<script src="/assets/js/prism.js"></script>
+		<script src="/assets/js/jquery.min.js"></script>
+		<script src="/assets/js/bootstrap.js"></script>
+		<script src="/assets/js/bootbox.min.js"></script>
+		<script src="/assets/js/docs.min.js"></script>
+		<script src="/assets/js/easing.min.js"></script>
+		<script src="/assets/js/main.js"></script>
+		<script type="text/javascript" src="/js/pbjs_home.js"></script>
 		
 		<!--Prebid.js and video player code-->
 		<script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
@@ -80,7 +80,7 @@
 		        {
 		          bidder: 'appnexusAst',
 		          params: {
-		            placementId: '9333431', // Add your own placement id here
+		            placementId: '13232361', // Add your own placement id here
 		            video: {
 		              skipppable: true,
 		              playback_method: ['auto_play_sound_off']
