made header links relative

--- a/examples/video/instream/brid/pb-ve-brid.html
+++ b/examples/video/instream/brid/pb-ve-brid.html
@@ -22,17 +22,17 @@
 		<!-- OneTrust Cookies Consent Notice end -->
 		
 		
-		<!--<link href="http://www.prebid.org/assets/css/bootstrap.min.css" rel="stylesheet">-->
+		<!--<link href=" /assets/css/bootstrap.min.css" rel="stylesheet">-->
 		<!-- Latest compiled and minified Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link href="http://www.prebid.org/assets/css/docs.min.css" rel="stylesheet">
+		<link href=" /assets/css/docs.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="/assets/css/prism.css">
-		<link href="http://www.prebid.org/assets/css/style.css" rel="stylesheet">
+		<link href=" /assets/css/style.css" rel="stylesheet">
 		
 		
 		<!-- Favicons -->
-		<link href="http://www.prebid.org/assets/images/favicon.png" rel="icon">
-		<link href="http://www.prebid.org/assets/images/apple-touch-icon.png" rel="apple-touch-icon">
+		<link href=" /assets/images/favicon.png" rel="icon">
+		<link href=" /assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 		
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -150,7 +150,7 @@
 <body>
     
     	<div style="margin:0; padding:0;">
-			<div style="margin-top: 20px; padding-left: 10px;"><a href="http://www.prebid.org"><img src="http://www.prebid.org/assets/images/logos/prebid_final.png" width="200" height="33"></a></div>
+			<div style="margin-top: 20px; padding-left: 10px;"><a href="http://www.prebid.org"><img src=" /assets/images/logos/prebid_final.png" width="200" height="33"></a></div>
 			
 			<div style="margin:0; padding:0;">
 			
