fixed link to prebid.org to not open in new tab

--- a/examples/video/instream/brid/pb-ve-brid.html
+++ b/examples/video/instream/brid/pb-ve-brid.html
@@ -150,7 +150,7 @@
 <body>
     
     	<div style="margin:0; padding:0;">
-			<div style="margin-top: 20px; padding-left: 10px;"><a href="http://www.prebid.org"><img src=" /assets/images/logos/prebid_final.png" width="200" height="33"></a></div>
+			<div style="margin-top: 20px; padding-left: 10px;"><a href="http://www.prebid.org" target="self"><img src=" /assets/images/logos/prebid_final.png" width="200" height="33"></a></div>
 			
 			<div style="margin:0; padding:0;">
 			
