fixing some more broken links

--- a/examples/video/instream/brid/pb-ve-brid.html
+++ b/examples/video/instream/brid/pb-ve-brid.html
@@ -49,7 +49,7 @@
 		<script src="/assets/js/docs.min.js"></script>
 		<script src="/assets/js/easing.min.js"></script>
 		<script src="/assets/js/main.js"></script>
-		<script type="text/javascript" src="assets/js/pbjs_home.js"></script>
+		<script type="text/javascript" src="/assets/js/pbjs_home.js"></script>
 		
 		<!--Prebid.js and video player code-->
 		<script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"></script>
