Removed background color

--- a/examples/video/instream/flowplayer/pb-ve-flowplayer.html
+++ b/examples/video/instream/flowplayer/pb-ve-flowplayer.html
@@ -187,7 +187,7 @@
 						</div>
 					</div>
 					
-					<div class="row" style="background-color: #cccccc;">	
+					<div class="row">	
 						<!--video placeholder | this should be formatted per the needs of each player-->
 						<div>
 							<div id="player"></div>
