Fixed broken div and typo on jwplayer

--- a/examples/video/instream/jwplayer/pb-ve-jwplayer-platform.html
+++ b/examples/video/instream/jwplayer/pb-ve-jwplayer-platform.html
@@ -145,7 +145,7 @@
 					<h4>Prebid Video JW Player (Platform) Example</h4>
 					
 					<!--video example explanation-->
-					<div>This is an example of instream video using Prebid,js and JW Player. 
+					<div>This is an example of instream video using Prebid.js and JW Player. 
 					
 					<!--video warning-->
 					<div markdown="span" class="pb-alert pb-alert-important" role="alert">
