--- a/examples/video/instream/jwplayer/pb-ve-jwplayer-playlist.html
+++ b/examples/video/instream/jwplayer/pb-ve-jwplayer-playlist.html
@@ -145,12 +145,24 @@
 					<hr>
 					<p>Outstream</p>
 					<hr>
+					<p>Server</p>
+					<ul class="pb-video-list" style="list-style-type:none">
+						<li><a href="/examples/video/server/brid/pbs-ve-brid.html">Brid</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-platform.html">JW PLayer (Platform)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-hosted.html">JW PLayer (Hosted)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-jwplayer7.html">JW PLayer (V7 Player)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-playlist.html">JW PLayer (Playlist)</a></li>
+						<li><a href="/examples/video/server/kaltura/pbs-ve-kaltura.html">Kaltura</a></li>
+						<li><a href="/examples/video/server/ooyala/pbs-ve-ooyala.html">Ooyala</a></li>
+						<li><a href="/examples/video/server/videojs/pbs-ve-videojs.html">Video.js</a></li>
+					</ul>
+					<hr>
 					<p>Long Form</p>				
 				</div>
 				
 				<!--content-->
 				<div class="col-sm-9 pb-content" markdown="1">
-					<h4>Prebid Video | JW Player (Playlist) Example</h4>
+					<h1>Prebid Video | JW Player (Playlist) Example</h1>
 					
 					<!--video example explanation-->
 					<div>An example of instream video with a playlist using Prebid.js and JW Player.</div> 
@@ -175,7 +187,7 @@
 					</div>
 					<div>
 					<h4>Place this code in the page header.</h4>
-<pre>
+<pre class="pb-code-hl">
 <!--put javascript code here-->
 &lt;script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"&gt;&lt;/script&gt;
   &lt;script&gt;
@@ -202,7 +214,7 @@
             bids: [{
                 bidder: 'appnexus',
                 params: {
-                    placementId: 13232361, // Add your own placement id here
+                    placementId: 13232361, // Add your own placement id here<br>
                     video: {
                         skipppable: true,
                         playback_method: ['auto_play_sound_off']
@@ -232,7 +244,8 @@
         }
 
         pbjs.que.push(function() {
-            pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
+	        // add your ad units to the bid request<br>
+            pbjs.addAdUnits(videoAdUnit); 
 
             pbjs.setConfig({
                 debug: true,
@@ -251,7 +264,7 @@
 					<!--body code example-->
 					<div>
 					<h4>Place this code in the page body.</h4>
-<pre>
+<pre class="pb-code-hl">
 <!--put body html and javascript here-->
 
 	&lt;!--player div--&gt;
@@ -266,8 +279,8 @@
 	            adTag = url;
 	            console.log("MESSAGE: invoking the video player");
 	
-	            // if this is our first time invoking the player, we also need to create the player
-	            // and the event listeners
+	            // if this is our first time invoking the player, we also need to create the player &nbsp;
+	            // and the event listeners <br>
 	            if (firstPlay) {
 	                playerInstance.setup({
 	                    "playlist": "https://content.jwplatform.com/feeds/ae4tmw2D.json",
@@ -279,11 +292,11 @@
 	                });
 	
 	                // set firstPlay to false to make sure we don't call setup() on our player a second time
-	                firstPlay = false;
+	                firstPlay = false;&nbsp;
 	
-	                // beforePlay gets triggered before each content video plays
-	                // we play the ad tag being stored in the variable adTag, which we refresh
-	                // each time a content video plays by calling requestVideoAd
+	                // beforePlay gets triggered before each content video plays &nbsp;
+	                // we play the ad tag being stored in the variable adTag, which we refresh &nbsp;
+	                // each time a content video plays by calling requestVideoAd <br>
 	                playerInstance.on("beforePlay", function() {
 	                    playerInstance.playAd(adTag);
 	                    console.log("MESSAGE: refreshing the ad slot");
@@ -292,7 +305,7 @@
 	                    });
 	                });
 	
-	                // if our playlist ends and does not repeat, we want to play the last ad we got
+	                // if our playlist ends and does not repeat, we want to play the last ad we got <br>
 	                playerInstance.on("beforeComplete", function() {
 	                    if (playerInstance.getPlaylistIndex() === playerInstance.getPlaylist().length - 1) {
 	                        playerInstance.playAd(adTag);
@@ -301,9 +314,9 @@
 	            }
 	        }
 	
-	        // if prebid returned an ad before the browser reached the end of the page,
-	        // the version of invokeVideoPlayer we defined in the header has stored the url in tempTag,
-	        // so we call invokeVideoPlayer with the stored url we stored
+	        // if prebid returned an ad before the browser reached the end of the page, &nbsp;
+	        // the version of invokeVideoPlayer we defined in the header has stored the url in tempTag, &nbsp;
+	        // so we call invokeVideoPlayer with the stored url we stored <br>
 	        if (tempTag) {
 	            invokeVideoPlayer(tempTag);
 	            tempTag = false;
@@ -400,6 +413,7 @@
 
         </script>
 
- 
+		<script type="text/javascript" src="/assets/js/video/pb-code-highlight.js"></script>
 
     </body>
+</html>
