--- a/examples/video/instream/kaltura/pb-ve-kaltura.html
+++ b/examples/video/instream/kaltura/pb-ve-kaltura.html
@@ -158,12 +158,24 @@
 					<hr>
 					<p>Outstream</p>
 					<hr>
+					<p>Server</p>
+					<ul class="pb-video-list" style="list-style-type:none">
+						<li><a href="/examples/video/server/brid/pbs-ve-brid.html">Brid</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-platform.html">JW PLayer (Platform)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-hosted.html">JW PLayer (Hosted)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-jwplayer7.html">JW PLayer (V7 Player)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-playlist.html">JW PLayer (Playlist)</a></li>
+						<li><a href="/examples/video/server/kaltura/pbs-ve-kaltura.html">Kaltura</a></li>
+						<li><a href="/examples/video/server/ooyala/pbs-ve-ooyala.html">Ooyala</a></li>
+						<li><a href="/examples/video/server/videojs/pbs-ve-videojs.html">Video.js</a></li>
+					</ul>
+					<hr>
 					<p>Long Form</p>				
 				</div>
 				
 				<!--content-->
 				<div class="col-sm-9 pb-content" markdown="1">
-					<h4>Prebid Video | Kaltura Example</h4>
+					<h1>Prebid Video | Kaltura Example</h1>
 					
 					<!--video example explanation-->
 					<div>An example of instream video using Prebid.js and the Kaltura player.</div> 
@@ -188,7 +200,7 @@
 					</div>
 					<div>
 					<h4>Place this code in the page header.</h4>
-<pre>
+<pre class="pb-code-hl">
 <!--put javascript code here-->
 &lt;script&gt;
             var pbjs = pbjs || {};
@@ -225,7 +237,7 @@
                 bids: [{
                     bidder: 'appnexus',
                     params: {
-                        placementId: 13232361, // Add your own placement ID here
+                        placementId: 13232361, // Add your own placement ID here<br>
                         video: {
                             skippable: true,
                             playback_method: ['auto_play_sound_off']
@@ -235,7 +247,7 @@
             };
 
             pbjs.que.push(function() {
-                pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
+                pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request<br>
 
                 pbjs.setConfig({
                     debug: true,
@@ -269,7 +281,7 @@
 					<!--body code example-->
 					<div>
 					<h4>Place this code in the page body.</h4>
-<pre>
+<pre class="pb-code-hl">
 <!--put body html and javascript here-->
 &lt;div id="myPlayer" style="width:640px; height:480px;"&gt;&lt;/div&gt;
 &lt;!-- INCLUDE KALTURA PLAYER SCRIPT
@@ -461,6 +473,6 @@
 
         </script>
 
- 
+		<script type="text/javascript" src="/assets/js/video/pb-code-highlight.js"></script>
 
     </body>
