--- a/examples/video/instream/ooyala/pb-ve-ooyala.html
+++ b/examples/video/instream/ooyala/pb-ve-ooyala.html
@@ -117,7 +117,7 @@
                 bids: [{
                     bidder: 'appnexus',
                     params: {
-                        placementId: iosDevice ? 13239390 : 13232361, // Add your own placement id here. Note, skippable video is not supported on iOS 
+                        placementId: iosDevice ? 13239390 : 13232361, 
                         video: {
                             skippable: true,
                             playback_method: ['auto_play_sound_off']
@@ -127,7 +127,7 @@
             };
 
             pbjs.que.push(function() {
-                pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
+                pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request<br>
 
                 /* Use the Prebid Cache - required for video ads */
 
@@ -186,12 +186,24 @@
 					<hr>
 					<p>Outstream</p>
 					<hr>
+					<p>Server</p>
+					<ul class="pb-video-list" style="list-style-type:none">
+						<li><a href="/examples/video/server/brid/pbs-ve-brid.html">Brid</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-platform.html">JW PLayer (Platform)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-hosted.html">JW PLayer (Hosted)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-jwplayer7.html">JW PLayer (V7 Player)</a></li>
+						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-playlist.html">JW PLayer (Playlist)</a></li>
+						<li><a href="/examples/video/server/kaltura/pbs-ve-kaltura.html">Kaltura</a></li>
+						<li><a href="/examples/video/server/ooyala/pbs-ve-ooyala.html">Ooyala</a></li>
+						<li><a href="/examples/video/server/videojs/pbs-ve-videojs.html">Video.js</a></li>
+					</ul>
+					<hr>
 					<p>Long Form</p>				
 				</div>
 				
 				<!--content-->
 				<div class="col-sm-9 pb-content" markdown="1">
-					<h4>Prebid Video | Ooyala Example</h4>
+					<h1>Prebid Video | Ooyala Example</h1>
 					
 					<!--video example explanation-->
 					<div>An example of instream video using Prebid.js and the Ooyala player.</div> 
@@ -216,7 +228,7 @@
 					</div>
 					<div>
 					<h4>Place this code in the page header.</h4>
-<pre>
+<pre class="pb-code-hl">
 <!--put javascript code here-->
 	&lt;script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"&gt;&lt;/script&gt;
     &lt;!-- LOAD OOYALA PLUGINS
@@ -284,7 +296,7 @@
 	        bids: [{
 	            bidder: 'appnexus',
 	            params: {
-	                placementId: iosDevice ? 13239390 : 13232361, // Add your own placement id here. Note, skippable video is not supported on iOS 
+	                placementId: iosDevice ? 13239390 : 13232361, // Add your own placement id here. Note, skippable video is not supported on iOS<br>
 	                video: {
 	                    skippable: true,
 	                    playback_method: ['auto_play_sound_off']
@@ -294,7 +306,7 @@
 	    };
 	
 	    pbjs.que.push(function() {
-	        pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
+	        pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request<br>
 	
 	        /* Use the Prebid Cache - required for video ads */
 	
@@ -333,7 +345,7 @@
 					<!--body code example-->
 					<div>
 					<h4>Place this code in the page body.</h4>
-<pre>
+<pre class="pb-code-hl">
 <!--put body html and javascript here-->
 &lt;script&gt;
             var invokeVideoPlayer = function(url) {
@@ -567,7 +579,6 @@
 
         </script>        
 
-
- 
+		<script type="text/javascript" src="/assets/js/video/pb-code-highlight.js"></script>
 
     </body>
