--- a/examples/video/server/videojs/pbs-ve-videojs.html
+++ b/examples/video/server/videojs/pbs-ve-videojs.html
@@ -178,11 +178,13 @@
 					<hr>
 					<p>Server</p>
 					<ul class="pb-video-list" style="list-style-type:none">
+						<li><a href="/examples/video/server/brid/pbs-ve-brid.html">Brid</a></li>
 						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-platform.html">JW PLayer (Platform)</a></li>
 						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-hosted.html">JW PLayer (Hosted)</a></li>
 						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-jwplayer7.html">JW PLayer (V7 Player)</a></li>
 						<li><a href="/examples/video/server/jwplayer/pbs-ve-jwplayer-playlist.html">JW PLayer (Playlist)</a></li>
 						<li><a href="/examples/video/server/kaltura/pbs-ve-kaltura.html">Kaltura</a></li>
+						<li><a href="/examples/video/server/ooyala/pbs-ve-ooyala.html">Ooyala</a></li>
 						<li><a href="/examples/video/server/videojs/pbs-ve-videojs.html">Video.js</a></li>
 					</ul>
 					<hr>
@@ -191,7 +193,7 @@
 				
 				<!--content-->
 				<div class="col-sm-9 pb-content" markdown="1">
-					<h4>Prebid Server Video | Video.js</h4>
+					<h1>Prebid Server Video | Video.js</h1>
 					
 					<!--video example explanation-->
 					<div>This is an example of video with a pre-roll ad using Prebid Server and Video.js Player.</div>
@@ -222,7 +224,7 @@
 					</div>
 					<div>
 					<h4>Place this code in the page header.</h4>
-<pre>
+<pre class="pb-code-hl">
 		
 	&lt;script async src="//acdn.adnxs.com/prebid/not-for-prod/1/prebid.js"&gt;&lt;/script&gt;
 	
@@ -285,8 +287,8 @@
 
         pbjs.que.push(function() {
 
-            // configure prebid to use prebid cache and prebid server
-            // make sure to add your own accountId to your s2sConfig object
+            // configure prebid to use prebid cache and prebid server &nbsp;
+            // make sure to add your own accountId to your s2sConfig object <br>
             pbjs.setConfig({
                 cache: {
                     url: 'https://prebid.adnxs.com/pbc/v1/cache'
@@ -295,12 +297,13 @@
                 s2sConfig: {
                     endpoint: 'http://prebid.adnxs.com/pbs/v1/openrtb2/auction',
                     enabled: true,
-                    accountId: 'c9d412ee-3cc6-4b66-9326-9f49d528f13e', // replace this with your account id
+                    accountId: 'c9d412ee-3cc6-4b66-9326-9f49d528f13e', // replace this with your account id <br>
                     bidders: ['appnexus']
                 }
             });
 
-            pbjs.addAdUnits(videoAdUnit); // add your ad units to the bid request
+			// add your ad units to the bid request<br>
+            pbjs.addAdUnits(videoAdUnit); 
 
             pbjs.requestBids({
                 bidsBackHandler: function(bids) {
@@ -327,7 +330,7 @@
 					<!--body code example-->
 					<div>
 					<h4>Place this code in the page body.</h4>
-<pre>
+<pre class="pb-code-hl">
 	<!--put body html and javascript here-->
 	
 	&lt;div class="example-video-container"&gt;
@@ -488,5 +491,7 @@
             }
 
         </script>
+        <script type="text/javascript" src="/assets/js/video/pb-code-highlight.js"></script>
+
 	</body>
 </html>
