--- a/examples/video/outstream/pb-ve-outstream-dfp.html
+++ b/examples/video/outstream/pb-ve-outstream-dfp.html
@@ -147,7 +147,9 @@
 					</ul>
 					<hr>
 					<p>Outstream</p>
-						<li><a href="/examples/video/outstream/pb-ve-outstream-dfp.html">Brid</a></li>
+					<ul class="pb-video-list" style="list-style-type:none">
+						<li><a href="/examples/video/outstream/pb-ve-outstream-dfp.html">Google Ad Manager</a></li>
+					</ul>
 					<hr>
 					<p>Server</p>
 					<ul class="pb-video-list" style="list-style-type:none">
