Fixed some typos

--- a/examples/video/outstream/pb-ve-outstream-dfp.html
+++ b/examples/video/outstream/pb-ve-outstream-dfp.html
@@ -149,6 +149,7 @@
 					<p>Outstream</p>
 					<ul class="pb-video-list" style="list-style-type:none">
 						<li><a href="/examples/video/outstream/pb-ve-outstream-dfp.html">Google Ad Manager</a></li>
+						<li><a href="/examples/video/outstream/pb-ve-outstream-no-server.html">No Ad Server</a></li>
 					</ul>
 					<hr>
 					<p>Server</p>
@@ -171,7 +172,7 @@
 					<h1>Prebid Outstream Video | Google Ad Manager</h1>
 					
 					<!--video example explanation-->
-					<div>This is an example of outstream video with using Prebid.js and Google Ad Manager.</div>
+					<div>This is an example of outstream video using Prebid.js and Google Ad Manager.</div>
 					
 					<!--video warning-->
 					<div markdown="span" class="pb-alert pb-alert-important" role="alert">
